# termux-script

./: .gitignore  .termux-startx11  README.md  adbd  ampv  gltools  iface.py  install.sh  jsconfig.json  litterbox  mac  mkvenv  pyproject.toml  rcat  rclone-mount  reduce  start  start-tailscaled.py  start_old  stopwatch  system_server-monitor.py  tag-convert.py  termux-file-editor  termux-file-editor.conf  termux-startx11  termux-url-opener  torrent.py  x11-start  x11-start-test  ytmusic-downloader.py
audio-server/: _types.py  client.py  constants.py  main.py  server.py  twoway.py
audio-server/codec/: _mapping.py  _types.py  base.py  opus.py
audio-server/lib/: client.py  constants.py  server.py
audio-server/sockets/: __init__.py  client.py  server.py  sockets.py
monitor/: README.md  cli.py  installer.py  ipc.py  main.py
monitor/lib/: __init__.py  _types.py  config.py  errors.py  ipc.py  ipc_types.py  manager.py  plugin.py  process_ipc.py  utils.py  worker.py
monitor/lib/plugin/: __init__.py  base.py  cron.py  interval.py  metadata.py  notifier.py  script.py
monitor/lib/plugins/: __init__.py  base.py  cron.py  interval.py
monitor/lib/types/: __init__.py  ipc.py  pipe.py  plugin.py
monitor/plugin/: __init__.py  iface.py  interface_monitor.py  long_process.py  n_server_proxy.py  system_monitor.py  system_server_monitor.py  tailscale.py
monitor/plugin/plugin_test/: __init__.py  cron_test.py  long_process.py
monitor/plugins/: __init__.py  interface_monitor.py  process_watch_monitor.py  system_monitor.py  system_server_monitor.py  tailscale.py
monitor/plugins/plugin_test/: __init__.py  cron_test.py  long_process.py  reboot.py
monitor/scripts/: root_worker.py  server.sh  worker.py
pm2_scripts/: reboot.sh  startup.sh
pm2_scripts/lib/: __init__.py  _runner.py  config.py  errors.py  notifier.py  utils.py
pm2_scripts/lib/plugin/: base.py  cron.py  interval.py
pm2_scripts/lib/types/: discord.py
pm2_scripts/nonroot/: ecosystem.config.js  proot-wrapper.sh  start.sh
pm2_scripts/root/: ecosystem.config.js  interface_monitor.py  process_watch_monitor.py  start.sh  system_monitor.py  system_server_monitor.py
pm2_scripts/root/tailscale/: tailscale.py
server/: requirements.txt  run.py
server/proxy/: __init__.py  app.py  config.py  downloader.py  enums.py  errors.py  singleton.py
server/proxy/_types/: nhentai.py
server/proxy/modifiers/: __init__.py  base.py  nhentai.py
server/proxy/modifiers/n/: mod.js
server/proxy/routes/: __init__.py  func.py  galleries.py  next.py  proxy.py  root.py
server/proxy/static/nhentai/: mod.js  reader.css  reader.js  scripts.js  styles.css
server/proxy/templates/: csrf.jinja2
server/proxy/templates/nhentai/: _base.jinja2  base.jinja2  chapter.jinja2  download_manager.jinja2  galleries.jinja2  gallery_series.jinja2  reader.jinja2
server/proxy/utils/: __init__.py  cache.py  logger.py  manga.py  request.py  xml.py
