[project]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = []

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["nameless"]
exclude = ["**/__pycache__", ".venv"]

reportUnusedImport = false
reportUnusedVariable = false
reportUnusedFunction = false

reportUninitializedInstanceVariable = "error"
reportUnnecessaryTypeIgnoreComment  = "error"
reportPrivateImportUsage            = "error"
reportMissingParameterType = "information"
reportUnknownParameterType = "information"
reportUnknownVariableType  = "information"
reportUnknownArgumentType  = "information"
reportUnusedCallResult      = false
reportUnknownMemberType     = false
reportMissingTypeStubs      = false
reportPrivateUsage          = false
reportCallIssue             = false
reportUnnecessaryIsInstance = false

[tool.ruff]
line-length = 120
indent-width = 4
fix = true
src = ["nameless"]
target-version = "py312"

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint.pylint]
max-returns = 10
max-statements = 25

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint]
select = [
    # core
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort

    # strictness
    "B",      # flake8-bugbear (common bugs)
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modern Python)
    "SIM",    # flake8-simplify
    "PIE",    # flake8-pie (misc lints)
    "RUF",    # ruff-specific rules

    # async
    "ASYNC",  # async/await issues

    # security
    "S",      # flake8-bandit (security)

    # code quality
    "N",      # pep8-naming
    "ANN",    # flake8-annotations (type hints)
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint rules
    "PERF",   # perflint (performance)
    "FURB",   # refurb (modern Python)

    # type checking
    "TCH",    # flake8-type-checking (TYPE_CHECKING blocks)
    "FA",     # flake8-future-annotations
]

ignore = [
    "ANN002",   # missing type annotation for *args
    "ANN003",   # missing type annotation for **kwargs
    "ANN401",   # dynamically typed expressions (Any)
    "ANN201",   # missing return type for public function
    "ANN202",   # missing return type for private function
    "ANN204",   # missing return type for __init__
    "S101",     # use of assert
    "PLR0913",  # too many arguments
    "PLR2004",  # magic value comparison
    "PLR0912",  # too many branches
    "PLR0915",  # too many statements
    "PLW0603",  # global statement
    "ASYNC109", # Async function definition with a `timeout` parameter
    "RUF001",   # String contains ambiguous
    "F403",     # import "*" used; unable to detect undefined names
    "S603",     # `subprocess` call: check for execution of untrusted input
    "S607",     # Starting a process with a partial executable path
]
